# cmake-generate-resources

./: CMakeLists.txt  README.md  lib.cpp  lib.h  release.sh  test.cpp
